--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.9",
+    "expo-file-system": "^15.2.2",
     "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "^0.16.3",
@@ -20,12 +21,16 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-animated-loader": "^1.0.0",
+    "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-infinite-scroll-view": "^0.4.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
-    "react-native-youtube": "^2.0.2"
+    "react-native-webview": "^11.26.0",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.2.2",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
